Fix scrollbar in index

--- a/static/hour_manager/css/index.css
+++ b/static/hour_manager/css/index.css
@@ -7,9 +7,9 @@ html {
 }
 
 #nohours {
-   margin: 0;
-   position: relative;                               
-   transform: translate(50%, 0);
+   display: flex;
+   align-content: center;
+   justify-content: center;
    color: white;
 }
 
@@ -76,6 +76,7 @@ body {
 #hoursdiv {
     margin-left: auto;
     margin-right: auto;
+
     width: 50%;
 }
 
